--- a/AppInstallerFileBuilder/AppInstallerFileBuilder/Views/MainPackageView.xaml
+++ b/AppInstallerFileBuilder/AppInstallerFileBuilder/Views/MainPackageView.xaml
@@ -219,7 +219,7 @@
                         </StackPanel>
 
                         <StackPanel Orientation="Horizontal" x:Name="Two_Update_Settings_Stack_Panel" x:Uid="Two_Update_Settings_Stack_Panel" Visibility="Collapsed">
-                            <TextBlock Text="Force Update" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="15"
+                            <TextBlock Text="Force update" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="15"
                             Margin="5" VerticalAlignment="Center" />
                             <ToggleSwitch
                                 Margin="21,0,0,0"
@@ -228,7 +228,7 @@
                                 IsOn="{Binding IsForcedUpdate}"
                                 Toggled="Force_Update_Switch_Toggled"
                             />
-                            <TextBlock Text="Auto Background Update" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="15"
+                            <TextBlock Text="Auto background update" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="15"
                             Margin="5" VerticalAlignment="Center" />
                             <ToggleSwitch
                                 Margin="21,0,0,0"
@@ -240,7 +240,7 @@
                         </StackPanel>
 
                         <StackPanel Orientation="Horizontal" x:Name="Three_Update_Settings_Stack_Panel" x:Uid="Three_Update_Settings_Stack_Panel" Visibility="Collapsed">
-                            <TextBlock Text="Show Prompt" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="15"
+                            <TextBlock Text="Show prompt" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="15"
                             Margin="5" VerticalAlignment="Center"/>
                             <ToggleSwitch
                                 Margin="21,0,0,0"
@@ -249,7 +249,7 @@
                                 IsOn="{Binding IsShowPrompt}"
                                 Toggled="Show_Prompt_Switch_Toggled"
                             />
-                            <TextBlock Text="Blocking Update" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="15"
+                            <TextBlock Text="Blocking update" Style="{StaticResource SubtitleTextBlockStyle}" FontSize="15"
                             Margin="31,5,5,5" VerticalAlignment="Center"/>
                             <ToggleSwitch
                                 Margin="2,0,0,0"
